fix security annotations and tests